--- a/index.html
+++ b/index.html
@@ -9,21 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Eagle+Lake|Ranga" rel="stylesheet">
 </head>
 <body>
-  <section class = "parallax1">
+  <section class = "head">
     <div class = "parallax-inner">
       <h1>Pacuare Nature Reserve</h1>
     </div>
   </section>
 
-  <section class = "parallax">
-    <div class = "parallax-inner">
-      <p>Pacuare Nature Reserve is a 2500 acre area of tropical rainforest on the Caribbean coast of Costa Rica.
-        The reserve was estabilshed by the Endangered Wildlife Trust in 1989 and in 2016 was gifted to Ecology Project International.
-        It is also the location of important nesting sites for leatherback sea turtles.</p>
-    </div>
-  </section>
-
-  <section class = "parallax2">
+  <section class = "home">
     <div class = "parallax-inner">
       <p>Leatherback sea turtles are endangered, and one of Pacuare's focuses is to aid in conservation
         efforts for these animals.  Leatherbacks are huge, weighing somewhere between 550 and 1500 lbs
@@ -31,7 +23,23 @@
     </div>
   </section>
 
-  <section class = "parallax3">
+  <section class = "about">
+    <div class = "parallax-inner">
+      <p>Pacuare Nature Reserve is a 2500 acre area of tropical rainforest on the Caribbean coast of Costa Rica.
+        The reserve was estabilshed by the Endangered Wildlife Trust in 1989 and in 2016 was gifted to Ecology Project International.
+        It is also the location of important nesting sites for leatherback sea turtles.</p>
+    </div>
+  </section>
+
+  <section class = "other">
+    <div class = "parallax-inner">
+      <p>Pacuare is open to volunteers who want to take part in the everyday activity of the reserve.
+          Volunteers accompany research assistants on nightly patrols to look for nesting mothers and
+          hatching nests, as well as taking part in recycling, maintenance, composting, and reforestation.</p>
+    </div>
+  </section>
+
+  <section class = "contact">
     <div class = "parallax-inner">
       <p>Pacuare is open to volunteers who want to take part in the everyday activity of the reserve.
           Volunteers accompany research assistants on nightly patrols to look for nesting mothers and
