--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
 
   <section class = "other">
     <div class = "parallax-inner" id = "other">
-      <h2>Want to Know More?</h2>
       <p><div class="dropdown">
-        <align: center>
+        <center>
         <a href="#">How can you get involved?</a>
         <div class="menu">
             <div class="item">
@@ -53,22 +52,22 @@
         </div>
     </div>
     <h2>Have an Experience to Share?</h2>
-      <div>
+      <div class = "survey" id = "question1">
           <label>Did you stay at the reserve when you visited?</label>
           <input type="radio" name="Y/N" value="Yes"> Yes
           <input type="radio" name="Y/N" value="No"> No <br>
       </div>
-      <div id = "question1">
-        <br><label>Which activities did you participate in?</label>
+      <div class = "survey" id = "question2">
+        <br><label>Which jobs did you volunteer for while at the reserve?</label>
           <br><br>
           <input type="radio" name="10" value="Y/N"> Recycling
           <input type="radio" name="9" value="Y/N"> Maintenance
           <input type="radio" name="8" value="Y/N"> Composting
           <input type="radio" name="7" value="Y/N"> Reforestation
-          <input type="radio" name="6" value="Y/N"> Reforestatio
+          <input type="radio" name="6" value="Y/N"> Reforestation
           <input type="radio" name="5" value="Y/N"> Research Assistance
       </div>
-      <div id = "question2">
+      <div class = "survey" id = "question3">
           <br><label>On a scale of 1 - 5 (5 being the best) how would you rate this experience?</label>
             <select name = "How Long?">
                 <option value = "option">5</option>
